crates/pgls_pretty_print/tests/snapshots/single/tests__partition_bound_spec_0_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/partition_bound_spec_0.sql
snapshot_kind: text
---
CREATE TABLE measurement
(id INT, logdate DATE)
PARTITION BY RANGE(logdate);
