crates/pgls_pretty_print/tests/snapshots/single/tests__pl_assign_stmt_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/pl_assign_stmt_0_100.sql
snapshot_kind: text
---
DO $$
DECLARE
    x integer;
BEGIN
    x := 42;
END $$;
