crates/pgls_pretty_print/tests/snapshots/single/tests__prepare_stmt_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/prepare_stmt_0_100.sql
snapshot_kind: text
---
PREPARE my_insert (INT, TEXT) AS INSERT INTO users (id, name) VALUES ($1, $2);;
