crates/pgls_pretty_print/tests/snapshots/single/tests__prepare_stmt_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/prepare_stmt_0.sql
snapshot_kind: text
---
prepare my_insert (int, text) as insert into users (id, name) values ($1, $2);;
